--- a/src/app/modules/commons/users/signup/signupEndError.html
+++ b/src/app/modules/commons/users/signup/signupEndError.html
@@ -2,27 +2,27 @@
 <!-- body start-->
     <div class="row"> <div class="col s10"></div></div>   
     
-	<div class="container">
+	<div class="container colorMain-text">
         <div class="section">
             <!--   Icon Section   -->
             <div class="row">
                 <div class="col s12">
                     <div class="center icon-block">
-                         <div class="red-text text-lighten-1">
+                         <div class="colorAccent-text">
                              <i class="medium material-icons">highlight_off</i>
                          </div>
-                        <h5 class="center" translate="errorPage.title"></h5>
+                        <h5 class="center" translate="signupEndPage.errorPage.title"></h5>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col s12">
-                {{'errorPage.text' | translate }} {{message}}
+                <div class="col s12 center-align">
+                <h5>{{'signupEndPage.errorPage.text' | translate }}<br> {{message}}</h5>
                 </div>
             </div>
             <div class="row">
                 <div class="center col s12">
-                <a href="" class="btn white-text blue-grey darken-3" ng-click="goHome()">{{'errorPage.buttonHome' | translate }}</a>&nbsp;
+                <a href="" class="btn white-text colorAccent" ng-click="goHome()">{{'signupEndPage.errorPage.buttonHome' | translate }}</a>&nbsp;
                 </div>
             </div>
         </div>
