#111 : [PUB-008] Mentions légales §5

--- a/src/app/modules/public/legal.html
+++ b/src/app/modules/public/legal.html
@@ -6,13 +6,13 @@
         En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il
         est précisé aux utilisateurs du site <a href="http://www.qaobee.com/"
                                                 title="Qaobee - www.qaobee.com"
-            >www.qaobee.com</a> l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :
+    >www.qaobee.com</a> l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :
     </p>
 
     <p>
         <strong>Propriétaire</strong> : Qaobee – SARL – 35 rue Jeanne Maistre 29200 BREST<br/> <strong>Créateur</strong>
         : <a href="www.qaobee.com">Qaobee</a><br/> <strong>Responsable
-        publication</strong> : Qaobee – contact@qaobee.com<br/> 
+        publication</strong> : Qaobee – contact@qaobee.com<br/>
         <strong>Webmaster</strong> : Qaobee – contact@qaobee.com<br/>
         <strong>Hébergeur</strong> : RedHat OpenShift https://www.openshift.com et Surge https://surge.sh/<br/>
     </p>
@@ -54,11 +54,9 @@
 
     <p>
         Toutes les informations indiquées sur le site <a href="http://www.qaobee.com/" title="Qaobee - www.qaobee.com">www.qaobee.com</a>
-        sont données à titre indicatif, et sont susceptibles d’évoluer. Par
-        ailleurs, les renseignements figurant sur le site <a href="http://www.qaobee.com/"
-                                                             title="Qaobee - www.qaobee.com">www.qaobee.com</a> ne sont
-        pas exhaustifs. Ils sont donnés sous réserve de
-        modifications ayant été apportées depuis leur mise en ligne.
+        sont données à titre indicatif, et sont susceptibles d’évoluer. Par ailleurs, les renseignements figurant sur le
+        site <a href="http://www.qaobee.com/" title="Qaobee - www.qaobee.com">www.qaobee.com</a> ne sont pas exhaustifs.
+        Ils sont donnés sous réserve de modifications ayant été apportées depuis leur mise en ligne.
     </p>
 
     <h3>4. Limitations contractuelles sur les données techniques.</h3>
@@ -72,16 +70,14 @@
     <h3>5. Propriété intellectuelle et contrefaçons.</h3>
 
     <p>Qaobee est propriétaire des droits de propriété intellectuelle ou détient les droits d’usage sur tous les
-        éléments accessibles sur le site, notamment les textes, images, graphismes, logo,
-        icônes, sons, logiciels.</p>
+        éléments accessibles sur le site, notamment les textes, images, graphismes, logo, icônes, sons, logiciels.</p>
 
     <p>Toute reproduction, représentation, modification, publication, adaptation de tout ou partie des éléments du site,
-        quel que soit le moyen ou le procédé utilisé, est interdite, sauf autorisation
-        écrite préalable de : Qaobee.</p>
+        quel que soit le moyen ou le procédé utilisé, est interdite, sauf autorisation écrite préalable de Qaobee.</p>
 
     <p>Toute exploitation non autorisée du site ou de l’un quelconque des éléments qu’il contient sera considérée comme
-        constitutive d’une contrefaçon et poursuivie conformément aux dispositions des
-        articles L.335-2 et suivants du Code de Propriété Intellectuelle.</p>
+        constitutive d’une contrefaçon et poursuivie conformément aux dispositions des articles L.335-2 et suivants du
+        Code de Propriété Intellectuelle.</p>
 
     <h3>6. Limitations de responsabilité.</h3>
 
@@ -94,7 +90,7 @@
         Qaobee ne pourra également être tenue responsable des dommages indirects (tels par exemple qu’une perte de
         marché ou perte d’une chance) consécutifs à l’utilisation du site <a
             href="http://www.qaobee.com/" title="Qaobee - www.qaobee.com"
-            >www.qaobee.com</a>.
+    >www.qaobee.com</a>.
     </p>
 
     <p>Des espaces interactifs (possibilité de poser des questions dans l’espace contact) sont à la disposition des
@@ -124,10 +120,10 @@
         En tout état de cause Qaobee ne collecte des informations personnelles relatives à l'utilisateur que pour le
         besoin de certains services proposés par le site <a href="http://www.qaobee.com/"
                                                             title="Qaobee - www.qaobee.com"
-            >www.qaobee.com</a>. L'utilisateur fournit ces informations en toute connaissance de cause, notamment
+    >www.qaobee.com</a>. L'utilisateur fournit ces informations en toute connaissance de cause, notamment
         lorsqu'il procède par lui-même à leur saisie. Il est alors précisé à l'utilisateur du site <a
             href="http://www.qaobee.com/" title="Qaobee - www.qaobee.com"
-            >www.qaobee.com</a> l’obligation ou non de fournir ces informations.
+    >www.qaobee.com</a> l’obligation ou non de fournir ces informations.
     </p>
 
     <p>Conformément aux dispositions des articles 38 et suivants de la loi 78-17 du 6 janvier 1978 relative à
