#112 : [PUB-008] Mentions légales : adresse société

--- a/src/app/modules/public/legal.html
+++ b/src/app/modules/public/legal.html
@@ -2,15 +2,13 @@
     <div class="row s12"></div>
     <h3>1. Présentation du site.</h3>
 
-    <p>
-        En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il
-        est précisé aux utilisateurs du site <a href="http://www.qaobee.com/"
-                                                title="Qaobee - www.qaobee.com"
-    >www.qaobee.com</a> l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :
+    <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il
+        est précisé aux utilisateurs du site <a href="http://www.qaobee.com/" title="Qaobee - www.qaobee.com">www.qaobee.com</a>
+        l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :
     </p>
 
     <p>
-        <strong>Propriétaire</strong> : Qaobee – SARL – 35 rue Jeanne Maistre 29200 BREST<br/> <strong>Créateur</strong>
+        <strong>Propriétaire</strong> : Qaobee – SARL – 20 Rue Cuirassé Bretagne, 29200 Brest, France<br/> <strong>Créateur</strong>
         : <a href="www.qaobee.com">Qaobee</a><br/> <strong>Responsable
         publication</strong> : Qaobee – contact@qaobee.com<br/>
         <strong>Webmaster</strong> : Qaobee – contact@qaobee.com<br/>
