#113 : [PUB-008] Mentions légales

--- a/src/app/modules/public/legal.html
+++ b/src/app/modules/public/legal.html
@@ -35,16 +35,14 @@
         </p>
 
         <p>Ce site est normalement accessible à tout moment aux utilisateurs. Une interruption pour raison de
-            maintenance
-            technique peut être toutefois décidée par Qaobee, qui s’efforcera alors de
+            maintenance technique peut être toutefois décidée par Qaobee, qui s’efforcera alors de
             communiquer préalablement aux utilisateurs les dates et heures de l’intervention.</p>
 
         <p>
             Le site <a href="https://www.qaobee.com/" title="Qaobee - www.qaobee.com">www.qaobee.com</a> est mis à jour
             régulièrement par Qaobee. De la même façon, les mentions légales peuvent être modifiées à
             tout moment : elles s’imposent néanmoins à l’utilisateur qui est invité à s’y référer le plus souvent
-            possible
-            afin d’en prendre connaissance.
+            possible afin d’en prendre connaissance.
         </p>
 
         <h3>3. Description des services fournis.</h3>
