--- a/src/app/modules/sandbox/effective/team/compare.html
+++ b/src/app/modules/sandbox/effective/team/compare.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col l2 m2 s12 white-text center">
                     <h5>
-                        <a href="" class="white-text waves-effect waves-light" ng-click="doTheBack()">
+                        <a href="" class="black-text waves-effect waves-light" ng-click="doTheBack()">
                             <i class="fa fa-arrow-left"></i>
                         </a>
                     </h5>
