--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -1,7 +1,7 @@
 <div class="container">
     <!-- body start-->
     <div class="row"></div>
-    
+
     <!-- entete start -->
     <div class="row colorMain white-text">
         <div class="col s2 left-align">
@@ -11,75 +11,79 @@
         <div class="col s8 center-align">
             <h5>{{'mainPlayer.title' | translate }} {{currentEffective.label}}</h5>
         </div>
-        
+
         <div class="col s2">&nbsp;</div>
-        
+
         <v-tabs class="tabs" horizontal active="activeTabIndex">
-            <v-tab class="tab" ng-click="changeTabDefault(0)"><a ng-href="" ng-class="{'active': activeTabIndex === 0}">{{'tabEffectif.dashboard' | translate }}</a></v-tab>
-            <v-tab class="tab" ng-click="changeTabDefault(1)"><a ng-href="" ng-class="{'active': activeTabIndex === 1}">{{'tabEffectif.Listplayer' | translate }} ({{players.length}})</a></v-tab>
+            <v-tab class="tab" ng-click="changeTabDefault(0)"><a ng-href="" ng-class="{'active': activeTabIndex === 0}">{{'tabEffectif.dashboard'
+                | translate }}</a></v-tab>
+            <v-tab class="tab" ng-click="changeTabDefault(1)"><a ng-href="" ng-class="{'active': activeTabIndex === 1}">{{'tabEffectif.Listplayer'
+                | translate }} ({{players.length}})</a></v-tab>
         </v-tabs>
-        
+
     </div>
     <!-- entete end -->
 
-    <div class="row"><filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar></div>
-    
     <div class="row">
-        
+        <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
+    </div>
+
+    <div class="row">
+
         <v-pages class="vPages--default" active="activeTabIndex">
             <v-page>
-                
+
                 <div class="col s12 m6 l3" style="margin-top:15px;">
                     <widget-efficiency-player meta="meta" user="user"></widget-efficiency-player>
                 </div>
-                
+
                 <div class="col s12 m6 l3" style="margin-top:15px;">
                     <widget-efficiency-player-nine meta="meta" user="user"></widget-efficiency-player-nine>
                 </div>
-                
+
                 <div class="col s12 m6 l3" style="margin-top:15px;">
                     <widget-efficiency-player-six meta="meta" user="user"></widget-efficiency-player-six>
                 </div>
-                
+
                 <div class="col s12 m6 l3" style="margin-top:15px;">
                     <widget-efficiency-player-seven meta="meta" user="user"></widget-efficiency-player-seven>
                 </div>
-                
-                
-                
+
+
                 <div class="col s12 m6 l6" style="margin-top:15px;">
-                    <widget-podium meta="meta" user="user" indicator="goalScored" nbitem="3" stataggregat="COUNT"></widget-podium>
+                    <widget-podium meta="meta" user="user" indicator="goalScored" nbitem="3"
+                                   stataggregat="COUNT"></widget-podium>
                 </div>
 
                 <div class="col s12 m6 l6" style="margin-top:15px;">
-                    <widget-podium meta="meta" user="user" indicator="playTime" nbitem="3" stataggregat="SUM"></widget-podium>
+                    <widget-podium meta="meta" user="user" indicator="playTime" nbitem="3"
+                                   stataggregat="SUM"></widget-podium>
                 </div>
-                
-                
-                
+
+
                 <div class="col s12 m6 l3">
-                    <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}" owners="tabOwner" series="series"
-                                        start-date="periodicityActive.startDate" meta="meta"
-                                        end-date="periodicityActive.endDate"
-                                        indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
-                </div>
-                <div class="col s12 m6 l3">
-                    <qaobee-radar-chart title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}" owners="tabOwner" series="series"
-                                        start-date="periodicityActive.startDate" meta="meta"
-                                        end-date="periodicityActive.endDate"
-                                        indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
+                    <qaobee-radar-chart
+                            title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}"
+                            owners="tabOwner" series="series" periodicity-active="periodicityActive"
+                            indicators="['penaltyObtained', 'exclTmpObtained', 'shift', 'duelWon', 'passDec']"></qaobee-radar-chart>
                 </div>
                 <div class="col s12 m6 l3">
-                    <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}" owners="tabOwner" series="series"
-                                        start-date="periodicityActive.startDate" meta="meta"
-                                        end-date="periodicityActive.endDate"
-                                        indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
+                    <qaobee-radar-chart
+                            title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.negative' | translate}}"
+                            owners="tabOwner" series="series" meta="meta" periodicity-active="periodicityActive"
+                            indicators="['forceAtt', 'marcher', 'doubleDribble', 'looseball', 'foot', 'zone', 'stopGKAtt']"></qaobee-radar-chart>
                 </div>
                 <div class="col s12 m6 l3">
-                    <qaobee-radar-chart title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}" owners="tabOwner" series="series"
-                                        start-date="periodicityActive.startDate" meta="meta"
-                                        end-date="periodicityActive.endDate"
-                                        indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
+                    <qaobee-radar-chart
+                            title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.positive' | translate}}"
+                            owners="tabOwner" series="series" periodicity-active="periodicityActive"
+                            indicators="['neutralization', 'forceDef', 'contre', 'interceptionOk']"></qaobee-radar-chart>
+                </div>
+                <div class="col s12 m6 l3">
+                    <qaobee-radar-chart
+                            title="{{'stats.actionTab.defense' | translate}} {{'stats.actionTab.negative' | translate}}"
+                            owners="tabOwner" series="series" meta="meta" periodicity-active="periodicityActive"
+                            indicators="['penaltyConceded', 'interceptionKo', 'duelLoose', 'badPosition']"></qaobee-radar-chart>
                 </div>
             </v-page>
             <v-page>
@@ -96,7 +100,8 @@
                         <i class="material-icons">add</i>
                     </a>
 
-                    <button ng-click="compare()" title="{{'mainEffective.buttons.compare' | translate}}" class="waves-effect waves-light btn colorAccent">
+                    <button ng-click="compare()" title="{{'mainEffective.buttons.compare' | translate}}"
+                            class="waves-effect waves-light btn colorAccent">
                         <i class="material-icons">recent_actors</i>
                     </button>
                 </div>
@@ -108,7 +113,8 @@
                     <li class="col l3 m6 s12" ng-repeat="player in players | filter:queryPlayer">
                         <div class="card white blue-grey-text text-darken-2">
                             <div class="card-content center-align" style="height:48px;">
-                                <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}" class="blue-grey-text text-darken-2">
+                                <span class="card-title"><a href="#/private/viewPlayer/{{player._id}}"
+                                                            class="blue-grey-text text-darken-2">
                                     {{player.firstname}} {{player.name}}</a>
                                 </span>
                             </div>
@@ -118,7 +124,9 @@
                                 </a>
                             </div>
                             <div class="card-content center-align colorMain" style="height:48px;">
-                                <h5><small class="white-text">{{player.positionType}}</small></h5>
+                                <h5>
+                                    <small class="white-text">{{player.positionType}}</small>
+                                </h5>
                             </div>
 
                             <div class="card-action">
@@ -139,7 +147,7 @@
                 </ul>
             </v-page>
         </v-pages>
-        
+
     </div>
 
     <!-- body end-->
