--- a/src/app/modules/home/notifications/notifications.html
+++ b/src/app/modules/home/notifications/notifications.html
@@ -1,8 +1,7 @@
 <div class="widget card blue-grey lighten-4 blue-grey-text text-darken-2">
     <div class="card-content colorMain white-text">
         <i class="fa fa-bell"></i>
-        {{dashboard.widgetNotifications.title  | translate}}
-
+        {{'dashboard.widgetNotifications.title'  | translate}}
     </div>
     <div class="widget-content container" style="overflow-y: auto; height:250px;">
 
@@ -16,8 +15,8 @@
                         <img ng-src="{{getAvatar(n.senderId.avatar)}}" alt="" class="circle hide-on-med-and-down">
                         <a href="javascript:void(0);" class="title" 
                            ng-class="{'white-text' : n._id === id, 'red-text text-lighten-2' : n._id !== id}"
-                           ng-bind="n.title" ng-click="show(n._id)"></a>
-                        <p><span class="truncate" ng-bind="n.exerp"></span> <br>
+                           ng-bind-html="n.title" ng-click="show(n._id)"></a>
+                        <p><span class="truncate" ng-bind-html="n.exerp"></span> <br>
                             <small>{{n.senderId.firstname}} {{n.senderId.name}} | {{n.timestamp | date : 'short'}} |
                                 <a href="javascript:void(0);" ng-click="markAsRead(n._id)"
                                    class="waves-effect waves-teal btn-flat"
@@ -38,7 +37,7 @@
             </div>
             <div class="col s8" ng-if="id">
                 <div class="card-panel" ng-if="notif">
-                    <h4><a href="javascript:void(0);" ng-bind="notif.title"></a> <a href="javascript:void(0);" class="right"><i class="material-icons" ng-click="close()">close</i></a></h4>
+                    <h4><a href="javascript:void(0);" ng-bind-html="notif.title"></a> <a href="javascript:void(0);" class="right"><i class="material-icons" ng-click="close()">close</i></a></h4>
                     <p ng-bind-html="notif.content" style="text-align: justify"></p>
                     <small>{{notif.timestamp | date : 'short'}}
                         |
