#141 : [EFF-001] Tableau de bord effectifs

--- a/src/app/components/directives/commons/filter/calendar.html
+++ b/src/app/components/directives/commons/filter/calendar.html
@@ -173,7 +173,7 @@
                 <i class="material-icons">chevron_left</i>
             </a>
         </div>
-        <div class="col s8 center" ng-if="periodicity=='season'">
+        <div class="col s8 center" ng-if="periodicity=='season'">{{periodicityActive.label}}
             <h6 class="blue-grey-text text-darken-2" ng-bind="periodicityActive.label"></h6>
         </div>
         <div class="col s1 center" ng-if="periodicity=='season'">
