--- a/src/app/components/directives/stats/hand/radarChart.html
+++ b/src/app/components/directives/stats/hand/radarChart.html
@@ -25,7 +25,7 @@
         </canvas>
         <div class="right-align" ng-if="!noData">
             <qaobee-stat-detail-modal indicators="indicators" title="title" meta="meta" series="series" owners="owners"
-                                      periodicity-active="periodicityActive"
+                                      periodicity-active="periodicityActive" periodicity="periodicity"
             ></qaobee-stat-detail-modal>
         </div>
     </div>
