--- a/src/app/index.css
+++ b/src/app/index.css
@@ -53,7 +53,7 @@
 }
 
 .colorBckgModal {
-    background-color: rgba(100, 100, 100, 0.1);
+    background-color: rgba(242,243,242, 1);
     overflow: hidden;
 }
 
