--- a/src/app/modules/commons/users/signup/signupEnd.html
+++ b/src/app/modules/commons/users/signup/signupEnd.html
@@ -189,8 +189,8 @@
     
     
    <!-- Modal Cancel SignUp -->
-<div id="modalCancel" class="modal colorBckgModal">
-	<div class="modal-header center-align white-text">
+<div id="modalCancel" class="modal colorBckgModal colorMain-text">
+	<div class="modal-header center-align">
         <h5>
             <span class="fa fa-sign-in"></span>
             <span translate="modalSignupCancel.title"></span>
@@ -214,8 +214,8 @@
 </div>
 
    <!-- Modal Creation InProgress -->
-<div id="modalCreate" class="modal colorBckgModal">
-	<div class="modal-header center-align white-text">
+<div id="modalCreate" class="modal colorBckgModal colorMain-text">
+	<div class="modal-header center-align">
         <h5>
             <span class="fa fa-sign-in"></span>
             <span>{{'modalCreate.title' | translate}}</span>
