--- a/src/app/modules/sandbox/agenda/compare.html
+++ b/src/app/modules/sandbox/agenda/compare.html
@@ -29,7 +29,7 @@
                 <div class="col l7 m7 s12 white-text center">&nbsp;</div>
                 <div class="col l2 m2 s12 white-text center">
                     <h5>
-                        <a href="" class="white-text waves-effect waves-light" ng-click="doTheBack()">
+                        <a href="" class="black-text waves-effect waves-light" ng-click="doTheBack()">
                             <i class="fa fa-arrow-left"></i>
                         </a>
                     </h5>
