--- a/src/app/modules/commons/users/signup/signupEnd.html
+++ b/src/app/modules/commons/users/signup/signupEnd.html
@@ -124,14 +124,14 @@
                     <h5>{{'signupEndPage.tabCreateClub.tabTitle' | translate }}</h5>
                 </div>
                 <div class="collapsible-body">
-                    <form ng-submit="createStructure()" name="createStructureForm" class="container">
+                    <form name="createStructureForm" class="container">
                         <div class="row">
                             <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                             <div class="col input-field m3 s12">
                                 <label>{{'signupEndPage.tabFindClub.form.label.clubname' | translate}}  <span class="red-text text-lighten-1">*</span></label>
                             </div>
                             <div class="input-field col m3 s12">
-                                <input type="text" id="userStructureLabel" class="validate" ng-model="newStructure.label" required>
+                                <input type="text" id="userStructureLabel" class="validate" ng-model="structure.label" required>
                             </div>
                             <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         </div>
@@ -141,23 +141,23 @@
                                 <label>{{'signupEndPage.tabFindClub.form.label.clubAddress' | translate}}  <span class="red-text text-lighten-1">*</span></label>
                             </div>
                             <div class="input-field col m3 s12">
-                                <input type="text" id="userNewStructureCity" 
+                                <input type="text" id="createCity" 
                                        ng-autocomplete
                                        details="detailsCreateCity"
                                        ng-model="createCity" 
-                                       options="optionsCreateCity" 
+                                       options="optionsCreateCity"
                                        required 
                                        placeholder=""/>
                             </div>
                             <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                         </div>
 
-                        <div ng-show="structureSelectOK">
+                        <div ng-show="catAgeSelectOK">
                             <div class="row">
                                 <div class="col m3 hide-on-med-and-down">&nbsp;</div>
                                 <div class="col input-field m3 s12"><label>{{'signupEndPage.tabFindClub.form.label.categoryAge' | translate}} <span class="red-text text-lighten-1">*</span></label></div>
-                                <div class="input-field col s12">
-                                    <select name="categoryAgeSelect" ng-model="signup.categoryAge" id="userCategoryAgeSelect" class="browser-default blue-grey-text text-darken-1"
+                                <div class="input-field col s3">
+                                    <select name="categoryAgeSelect" ng-model="categoryAge" id="userCategoryAgeSelect" class="browser-default"
                                         ng-options="cat.label for cat in valuesCategoryAge track by cat._id" required>
                                         <option></option>
                                     </select>
@@ -172,7 +172,7 @@
                             <div class="col s12 center">
                                 <a ng-click="openCancelModal()" class="waves-effect waves-white btn btn-s colorAccent">{{'commons.buttons.cancel' | translate }}</a>&nbsp;
 
-                                <button type="submit"  style="max-width:50%" translate="commons.buttons.validate" 
+                                <button type="submit"  style="max-width:50%" ng-click="createStructure()" translate="commons.buttons.validate" 
                                         ng-disabled="createStructureForm.$invalid" tabindex="8"
                                         ng-class="{'btn btn-s waves-effect waves-white disabled': createStructureForm.$invalid, 
                                               'btn btn-s waves-effect waves-white colorSecondary': !createStructureForm.$invalid}">
